@@ -4,8 +4,6 @@ Tests for tipfy config
 """
 import unittest
 
-from nose.tools import assert_raises, raises
-
 from tipfy import Config, Tipfy, RequestHandler, REQUIRED_VALUE
 
 
@@ -16,8 +14,8 @@ class TestConfig(unittest.TestCase):
             'doo': 'ding',
         }})
 
-        assert config.get('foo', 'bar') == 'baz'
-        assert config.get('foo', 'doo') == 'ding'
+        self.assertEqual(config.get('foo', 'bar'), 'baz')
+        self.assertEqual(config.get('foo', 'doo'), 'ding')
 
     def test_get_existing_keys_from_default(self):
         config = Config({}, {'foo': {
@@ -25,13 +23,13 @@ class TestConfig(unittest.TestCase):
             'doo': 'ding',
         }})
 
-        assert config.get('foo', 'bar') == 'baz'
-        assert config.get('foo', 'doo') == 'ding'
+        self.assertEqual(config.get('foo', 'bar'), 'baz')
+        self.assertEqual(config.get('foo', 'doo'), 'ding')
 
     def test_get_non_existing_keys(self):
         config = Config()
 
-        assert config.get('foo', 'bar') is None
+        self.assertEqual(config.get('foo', 'bar'), None)
 
     def test_get_dict_existing_keys(self):
         config = Config({'foo': {
@@ -39,28 +37,28 @@ class TestConfig(unittest.TestCase):
             'doo': 'ding',
         }})
 
-        assert config.get('foo') == {
+        self.assertEqual(config.get('foo'), {
             'bar': 'baz',
             'doo': 'ding',
-        }
+        })
 
     def test_get_dict_non_existing_keys(self):
         config = Config()
 
-        assert config.get('bar') is None
+        self.assertEqual(config.get('bar'), None)
 
     def test_get_with_default(self):
         config = Config()
 
-        assert config.get('foo', 'bar', 'ooops') == 'ooops'
-        assert config.get('foo', 'doo', 'wooo') == 'wooo'
+        self.assertEqual(config.get('foo', 'bar', 'ooops'), 'ooops')
+        self.assertEqual(config.get('foo', 'doo', 'wooo'), 'wooo')
 
     def test_get_with_default_and_none(self):
         config = Config({'foo': {
             'bar': None,
         }})
 
-        assert config.get('foo', 'bar', 'ooops') is None
+        self.assertEqual(config.get('foo', 'bar', 'ooops'), None)
 
     def test_update(self):
         config = Config({'foo': {
@@ -68,43 +66,43 @@ class TestConfig(unittest.TestCase):
             'doo': 'ding',
         }})
 
-        assert config.get('foo', 'bar') == 'baz'
-        assert config.get('foo', 'doo') == 'ding'
+        self.assertEqual(config.get('foo', 'bar'), 'baz')
+        self.assertEqual(config.get('foo', 'doo'), 'ding')
 
         config.update('foo', {'bar': 'other'})
 
-        assert config.get('foo', 'bar') == 'other'
-        assert config.get('foo', 'doo') == 'ding'
+        self.assertEqual(config.get('foo', 'bar'), 'other')
+        self.assertEqual(config.get('foo', 'doo'), 'ding')
 
     def test_setdefault(self):
         config = Config()
 
-        assert config.get('foo') is None
+        self.assertEqual(config.get('foo'), None)
 
         config.setdefault('foo', {
             'bar': 'baz',
             'doo': 'ding',
         })
 
-        assert config.get('foo', 'bar') == 'baz'
-        assert config.get('foo', 'doo') == 'ding'
+        self.assertEqual(config.get('foo', 'bar'), 'baz')
+        self.assertEqual(config.get('foo', 'doo'), 'ding')
 
     def test_setdefault2(self):
         config = Config({'foo': {
             'bar': 'baz',
         }})
 
-        assert config.get('foo') == {
+        self.assertEqual(config.get('foo'), {
             'bar': 'baz',
-        }
+        })
 
         config.setdefault('foo', {
             'bar': 'wooo',
             'doo': 'ding',
         })
 
-        assert config.get('foo', 'bar') == 'baz'
-        assert config.get('foo', 'doo') == 'ding'
+        self.assertEqual(config.get('foo', 'bar'), 'baz')
+        self.assertEqual(config.get('foo', 'doo'), 'ding')
 
     def test_setitem(self):
         config = Config()
@@ -113,30 +111,30 @@ class TestConfig(unittest.TestCase):
             config[key] = value
             return config
 
-        assert setitem('foo', {'bar': 'baz'}) == {'foo': {'bar': 'baz'}}
+        self.assertEqual(setitem('foo', {'bar': 'baz'}), {'foo': {'bar': 'baz'}})
 
     def test_init_no_dict_values(self):
-        assert_raises(AssertionError, Config, {'foo': 'bar'})
-        assert_raises(AssertionError, Config, {'foo': None})
-        assert_raises(AssertionError, Config, 'foo')
+        self.assertRaises(AssertionError, Config, {'foo': 'bar'})
+        self.assertRaises(AssertionError, Config, {'foo': None})
+        self.assertRaises(AssertionError, Config, 'foo')
 
     def test_init_no_dict_default(self):
-        assert_raises(AssertionError, Config, {}, {'foo': 'bar'})
-        assert_raises(AssertionError, Config, {}, {'foo': None})
-        assert_raises(AssertionError, Config, {}, 'foo')
+        self.assertRaises(AssertionError, Config, {}, {'foo': 'bar'})
+        self.assertRaises(AssertionError, Config, {}, {'foo': None})
+        self.assertRaises(AssertionError, Config, {}, 'foo')
 
     def test_update_no_dict_values(self):
         config = Config()
 
-        assert_raises(AssertionError, config.update, {'foo': 'bar'}, 'baz')
-        assert_raises(AssertionError, config.update, {'foo': None}, 'baz')
-        assert_raises(AssertionError, config.update, 'foo', 'bar')
+        self.assertRaises(AssertionError, config.update, {'foo': 'bar'}, 'baz')
+        self.assertRaises(AssertionError, config.update, {'foo': None}, 'baz')
+        self.assertRaises(AssertionError, config.update, 'foo', 'bar')
 
     def test_setdefault_no_dict_values(self):
         config = Config()
 
-        assert_raises(AssertionError, config.setdefault, 'foo', 'bar')
-        assert_raises(AssertionError, config.setdefault, 'foo', None)
+        self.assertRaises(AssertionError, config.setdefault, 'foo', 'bar')
+        self.assertRaises(AssertionError, config.setdefault, 'foo', None)
 
     def test_setitem_no_dict_values(self):
         config = Config()
@@ -145,8 +143,8 @@ class TestConfig(unittest.TestCase):
             config[key] = value
             return config
 
-        assert_raises(AssertionError, setitem, 'foo', 'bar')
-        assert_raises(AssertionError, setitem, 'foo', None)
+        self.assertRaises(AssertionError, setitem, 'foo', 'bar')
+        self.assertRaises(AssertionError, setitem, 'foo', None)
 
 
 class TestGetConfig(unittest.TestCase):
@@ -156,9 +154,9 @@ class TestGetConfig(unittest.TestCase):
         from resources.template import default_config as template_config
         from resources.i18n import default_config as i18n_config
 
-        assert config.get_or_load('resources.template', 'templates_dir') == template_config['templates_dir']
-        assert config.get_or_load('resources.i18n', 'locale') == i18n_config['locale']
-        assert config.get_or_load('resources.i18n', 'timezone') == i18n_config['timezone']
+        self.assertEqual(config.get_or_load('resources.template', 'templates_dir'), template_config['templates_dir'])
+        self.assertEqual(config.get_or_load('resources.i18n', 'locale'), i18n_config['locale'])
+        self.assertEqual(config.get_or_load('resources.i18n', 'timezone'), i18n_config['timezone'])
 
     def test_default_config_with_non_existing_key(self):
         config = Config()
@@ -166,10 +164,10 @@ class TestGetConfig(unittest.TestCase):
         from resources.i18n import default_config as i18n_config
 
         # In the first time the module config will be loaded normally.
-        assert config.get_or_load('resources.i18n', 'locale') == i18n_config['locale']
+        self.assertEqual(config.get_or_load('resources.i18n', 'locale'), i18n_config['locale'])
 
         # In the second time it won't be loaded, but won't find the value and then use the default.
-        assert config.get_or_load('resources.i18n', 'i_dont_exist', 'foo') == 'foo'
+        self.assertEqual(config.get_or_load('resources.i18n', 'i_dont_exist', 'foo'), 'foo')
 
     def test_override_config(self):
         config = Config({
@@ -182,9 +180,9 @@ class TestGetConfig(unittest.TestCase):
             },
         })
 
-        assert config.get_or_load('resources.template', 'templates_dir') == 'apps/templates'
-        assert config.get_or_load('resources.i18n', 'locale') == 'pt_BR'
-        assert config.get_or_load('resources.i18n', 'timezone') == 'America/Sao_Paulo'
+        self.assertEqual(config.get_or_load('resources.template', 'templates_dir'), 'apps/templates')
+        self.assertEqual(config.get_or_load('resources.i18n', 'locale'), 'pt_BR')
+        self.assertEqual(config.get_or_load('resources.i18n', 'timezone'), 'America/Sao_Paulo')
 
     def test_override_config2(self):
         config = Config({
@@ -193,78 +191,73 @@ class TestGetConfig(unittest.TestCase):
             },
         })
 
-        assert config.get_or_load('resources.i18n', 'locale') == 'en_US'
-        assert config.get_or_load('resources.i18n', 'timezone') == 'America/Sao_Paulo'
+        self.assertEqual(config.get_or_load('resources.i18n', 'locale'), 'en_US')
+        self.assertEqual(config.get_or_load('resources.i18n', 'timezone'), 'America/Sao_Paulo')
 
     def test_get(self):
         config = Config({'foo': {
             'bar': 'baz',
         }})
 
-        assert config.get_or_load('foo', 'bar') == 'baz'
+        self.assertEqual(config.get_or_load('foo', 'bar'), 'baz')
 
     def test_get_with_default(self):
         config = Config()
 
-        assert config.get_or_load('resources.i18n', 'bar', 'baz') == 'baz'
+        self.assertEqual(config.get_or_load('resources.i18n', 'bar', 'baz'), 'baz')
 
     def test_get_with_default_and_none(self):
         config = Config({'foo': {
             'bar': None,
         }})
 
-        assert config.get_or_load('foo', 'bar', 'ooops') is None
+        self.assertEqual(config.get_or_load('foo', 'bar', 'ooops'), None)
 
     def test_get_with_default_and_module_load(self):
         config = Config()
-        assert config.get_or_load('resources.i18n', 'locale') == 'en_US'
-        assert config.get_or_load('resources.i18n', 'locale', 'foo') == 'en_US'
+        self.assertEqual(config.get_or_load('resources.i18n', 'locale'), 'en_US')
+        self.assertEqual(config.get_or_load('resources.i18n', 'locale', 'foo'), 'en_US')
 
-    @raises(KeyError)
     def test_required_config(self):
         config = Config()
-        config.get_or_load('resources.i18n', 'required')
+        self.assertRaises(KeyError, config.get_or_load, 'resources.i18n', 'foo')
 
-    @raises(KeyError)
     def test_missing_module(self):
         config = Config()
-        assert config.get_or_load('i_dont_exist', 'i_dont_exist') == 'baz'
+        self.assertRaises(KeyError, config.get_or_load, 'i_dont_exist', 'i_dont_exist')
 
-    @raises(KeyError)
     def test_missing_module2(self):
         config = Config()
-        assert config.get_or_load('i_dont_exist') == 'baz'
+        self.assertRaises(KeyError, config.get_or_load, 'i_dont_exist')
 
-    @raises(KeyError)
     def test_missing_key(self):
         config = Config()
-        config.get_or_load('resources.i18n', 'i_dont_exist')
+        self.assertRaises(KeyError, config.get_or_load, 'resources.i18n', 'i_dont_exist')
 
-    @raises(KeyError)
     def test_missing_default_config(self):
         config = Config()
-        assert config.get_or_load('webapp2', 'foo') == 'baz'
+        self.assertRaises(KeyError, config.get_or_load, 'tipfy', 'foo')
 
     def test_app_get_config(self):
         app = Tipfy()
 
-        assert app.get_config('resources.i18n', 'locale') == 'en_US'
-        assert app.get_config('resources.i18n', 'locale', 'foo') == 'en_US'
-        assert app.get_config('resources.i18n') == {
+        self.assertEqual(app.get_config('resources.i18n', 'locale'), 'en_US')
+        self.assertEqual(app.get_config('resources.i18n', 'locale', 'foo'), 'en_US')
+        self.assertEqual(app.get_config('resources.i18n'), {
             'locale': 'en_US',
             'timezone': 'America/Chicago',
             'required': REQUIRED_VALUE,
-        }
+        })
 
     def test_request_handler_get_config(self):
         app = Tipfy()
 
         handler = RequestHandler(app, None)
 
-        assert handler.get_config('resources.i18n', 'locale') == 'en_US'
-        assert handler.get_config('resources.i18n', 'locale', 'foo') == 'en_US'
-        assert handler.get_config('resources.i18n') == {
+        self.assertEqual(handler.get_config('resources.i18n', 'locale'), 'en_US')
+        self.assertEqual(handler.get_config('resources.i18n', 'locale', 'foo'), 'en_US')
+        self.assertEqual(handler.get_config('resources.i18n'), {
             'locale': 'en_US',
             'timezone': 'America/Chicago',
             'required': REQUIRED_VALUE,
-        }
+        })
